<resources>
    <string name="app_name">Coherent Receiver</string>
    <string name="action_settings">Settings</string>
    <string name="button_text_play">Play</string>
    <string name="button_text_pause">Pause</string>

    <string name="button_text_record">Record</string>
    <string name="title_activity_sample">SampleActivity</string>


    <string name="hint_message_input">Please specify a name!</string>
    <string name="notify_message_filename">Name</string>
    <string name="button_start_txt">Start</string>
    <string name="button_stop_txt">Stop</string>
    <string name="button_save_txt">Save</string>
    <string name="toast_start_recording">Start Recording!</string>
    <string name="toast_record_over">Finish Recording!</string>
    <string name="toast_start_save">Saving files on local disk!</string>
    <string name="toast_save_complete">Complete saving</string>
    <string name="hint_no_input">Please specify a name!</string>
    <string name="notify_message_time">Please set the time(s)</string>
    <string name="button_set_time">Set</string>
    <string name="toast_set_time">Set time OK!</string>

    <string name="button_pn">PN</string>
    <string name="button_zc">ZC</string>
    <string name="button_chirp">CHIRP</string>
    <string name="button_zccode">ZC+CODE</string>
    <string name="hint_repeat_time">retransmitting time</string>
    <string name="hint_gap_sample">samples between adjacent transmission</string>
    <string name="button_set_parameters">SET</string>
    <string name="message_not_implemented">Funtion not implemented yet!</string>
    <string name="not_enough_input">Not enought input!</string>
    <string name="title_activity_ruler">RulerActivity</string>


    <!-- strings for acoustic ruler -->
    <string name="bandwidth_str">Bandwidth (Hz)</string>
    <string name="fmin_str">fmin (kHz)</string>
    <string name="period_str">T (s)</string>
    <string name="velocity_str">V (m/s)</string>
    <string name="defaut_bandwidth_str">4000</string>
    <string name="defaut_fmin_str">18</string>
    <string name="default_period">0.04</string>
    <string name="default_velocity">346.5</string>
    <string name="parameter_setting_str">Parameters of Chirp signal</string>
    <string name="button_setting_str">Confirm Parameters</string>
    <string name="displacement_str">Displacement (cm):</string>
    <string name="no_input_hint">Please specify the input!</string>
    <string name="ip_notice_str">IP address </string>
    <string name="port_notice_str">Port </string>
    <string name="ip_hint_msg">192.168.0.1</string>
    <string name="port_hint_msg">12345</string>
    <string name="hint_error">Initialization error!</string>
    <string name="hint_sucess">Initialization sucess!</string>
    <string name="hint_input">Initialization error, not enough input!</string>
    <string name="title_activity_audio_ranging">AudioRanging</string>


    <string name="ruler_activity_title">AcousticRuler</string>
</resources>
