<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="hust.cc.acoustic.RulerActivity"
    tools:showIn="@layout/activity_ruler">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parameter_setting_str"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="@dimen/text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fmin_str"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/text_size"
            />
        <EditText
            android:id="@+id/fmin_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="@dimen/text_size"
            android:text="@string/defaut_fmin_str"
            android:paddingLeft="@dimen/text_margin"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bandwidth_str"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/text_size"
            />

        <EditText
            android:id="@+id/bandwidth_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/text_margin"
            android:text="@string/defaut_bandwidth_str"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/period_str"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/text_size"
            />
        <EditText
            android:id="@+id/period_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_period"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="@dimen/text_size"
            android:paddingLeft="@dimen/text_margin"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/velocity_str"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/text_size"
            />
        <EditText
            android:id="@+id/velocity_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_velocity"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="@dimen/text_size"
            android:paddingLeft="@dimen/text_margin"
            />
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_setting_str"
        android:textSize="@dimen/text_size"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:paddingTop="@dimen/seperate_margin"
        android:paddingBottom="@dimen/seperate_margin"
        android:background="@android:color/darker_gray"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/displacement_str"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="@dimen/text_size"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/distance_id"
        android:text="afd"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:textSize="@dimen/super_text_size"
        android:textColor="@android:color/holo_orange_dark"
        />
</LinearLayout>
