<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="hust.cc.acoustic.OFDMActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
    <Button
        android:id="@+id/btn_send_pn"
        android:layout_width="148dp"
        android:layout_height="50dp"
        android:text="@string/button_pn"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="63dp" />

    <Button
        android:id="@+id/btn_send_zc"
        android:layout_width="154dp"
        android:layout_height="46dp"
        android:text="@string/button_zc"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="193dp"
        tools:layout_editor_absoluteY="65dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
    <Button
        android:id="@+id/btn_send_chirp"
        android:layout_width="147dp"
        android:layout_height="46dp"
        android:text="@string/button_chirp"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="127dp" />

    <Button
        android:id="@+id/btn_send_zccode"
        android:layout_width="154dp"
        android:layout_height="42dp"
        android:text="@string/button_zccode"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="193dp"
        tools:layout_editor_absoluteY="127dp" />
    </LinearLayout>

    <EditText
        android:id="@+id/edit_repeat_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hint_repeat_time"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="234dp" />

    <EditText
        android:id="@+id/edit_gap_samples"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_gap_sample"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="296dp" />

    <Button
        android:id="@+id/btn_set_parameters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_set_parameters"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="358dp" />
</LinearLayout>
